<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/forward_setting">

        <EditTextPreference
            app:key="target_ip"
            app:title="@string/target_ip"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="target_port"
            app:title="@string/target_port"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="source_number"
            app:title="@string/source_number"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="show_sms_form_all_numbers"
            app:title="@string/show_sms_form_all_numbers" />

        <SwitchPreferenceCompat
            app:key="enable_forward"
            app:title="@string/enable_forward" />
        <!--   <ListPreference
               app:defaultValue="reply"
               app:entries="@array/reply_entries"
               app:entryValues="@array/reply_values"
               app:key="reply"
               app:title="@string/reply_title"
               app:useSimpleSummaryProvider="true" />-->


    </PreferenceCategory>

</PreferenceScreen>